Fug fix:Chinese tooltip will wrap in storage
tooltip of storage pool status will wrap in Chinese,change css
to avoid this issue.

--- a/ui/css/theme-default/storage.css
+++ b/ui/css/theme-default/storage.css
@@ -253,6 +253,7 @@
     z-index: 100;
     top: -300%;
     left: -140%;
+    white-space: nowrap;
 }
 
 .toolable:hover .tooltip {
